--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -231,8 +231,8 @@ Skizze dessen, \autoref{fig:skizze_warmepumpe}, sind im folgenden sichtbar.
 	\begin{center}
 		\includegraphics[width =0.5\textwidth]{./figures/warmepumpe_anschlusse.png}
 	\end{center}
-	\caption[Versuchsaufbau der Wärmepumpe]{Versuchsaufbau der Wärmepumpe, am Bild markiert  sind die Kanäle, mit denen die entsprechenden
-	Temperatursensoren verbunden sind
+	\caption[Versuchsaufbau der Wärmepumpe]{Versuchsaufbau der Wärmepumpe, am Bild markiert
+		sind die Kanäle, mit denen die entsprechenden Temperatursensoren verbunden sind
 	}\label{fig:warmepumpe}
 \end{figure}
 
@@ -240,32 +240,30 @@ Skizze dessen, \autoref{fig:skizze_warmepumpe}, sind im folgenden sichtbar.
 	\begin{center}
 		\includegraphics[width =0.5\textwidth]{./figures/warmepumpe_skizze.PNG}
 	\end{center}
-	\caption[Skizze des Versuchsaufbaus der Wärmepumpe]{Skizze des Versuchsaufbaus der Wärmepumpe \cite[text]{unterlagen_warmepumpe} \\
-	1 \dots Kompressor 230 V; 50/60 Hz. Leistungsaufnahme ca. 130 W bei 50 Hz \\
-	2 \dots ausschwenkbare Stellfläche für rot-markierten Warmwasserbehälter \\
-	3 \dots Verflüssiger \\
-	4 \dots Sammler/Reiniger \\
-	5 \dots Expansionsventil \\
-	6 \dots Temperaturfühler des Expansionsventils \\
-	7 \dots Verdamp-fer \\
-	8 \dots ausschwenkbare Stellfläche Kaltwasserbehälter 9 \dots Rohrwindungen als
-	elastische Verbindung zwischen Kompressor und Wärmetauscher 10 \dots
-	Druckwächter \\
-	11 \dots Kunststoffhalter (2x) für Thermometer und Temperaturfühler, zum
-	Anklemmen an Kupferrohre \\
-	12 \dots Kupfer-Meßschuh (2x) zum Einstecken von
-	Temperaturfühlern für Temperaturmessungen an den Kupferrohren des
-	Kältemittelkreislaufs \\
-	13 \dots Manometer für die Niederdruckseite; innere Skala
-	für Druckmessung von -1...+10 bar, äußerste Skala mit zugehöriger
-	Taupunkttemperatur für R134a von -60 °C bis +40 °C \\
-	14 \dots Manometer für die Hochdruckseite; innere Skala: Druck von -1...+30
-	bar, äußerste Skala mit zugehöriger Taupunkttemperatur für R 134a von -60 °C
-	bis + 85°C.
+	\caption[Skizze des Versuchsaufbaus der Wärmepumpe]{Skizze des Versuchsaufbaus der
+		Wärmepumpe \cite[text]{unterlagen_warmepumpe}                             \\
+		1 \dots Kompressor 230 V; 50/60 Hz. Leistungsaufnahme ca. 130 W bei 50 Hz \\
+		2 \dots ausschwenkbare Stellfläche für rot-markierten Warmwasserbehälter  \\
+		3 \dots Verflüssiger                                                      \\
+		4 \dots Sammler/Reiniger                                                  \\
+		5 \dots Expansionsventil                                                  \\
+		6 \dots Temperaturfühler des Expansionsventils                            \\
+		7 \dots Verdamp-fer                                                       \\
+		8 \dots ausschwenkbare Stellfläche Kaltwasserbehälter 9 \dots Rohrwindungen als
+		elastische Verbindung zwischen Kompressor und Wärmetauscher 10 \dots
+		Druckwächter                                                              \\
+		11 \dots Kunststoffhalter (2x) für Thermometer und Temperaturfühler, zum
+		Anklemmen an Kupferrohre                                                  \\
+		12 \dots Kupfer-Meßschuh (2x) zum Einstecken von Temperaturfühlern für
+		Temperaturmessungen an den Kupferrohren des Kältemittelkreislaufs         \\
+		13 \dots Manometer für die Niederdruckseite; innere Skala für Druckmessung von
+		-1...+10 bar, äußerste Skala mit zugehöriger Taupunkttemperatur für R134a von
+		-60 °C bis +40 °C                                                         \\
+		14 \dots Manometer für die Hochdruckseite; innere Skala: Druck von -1...+30
+		bar, äußerste Skala mit zugehöriger Taupunkttemperatur für R 134a von -60 °C
+		bis + 85°C.
 	}\label{fig:skizze_warmepumpe}
 \end{figure}
-
-
 
 Die Temperatursensoren werden mit dem Temperaturmessgerät, wie in
 \autoref{fig:warmepumpe} sichtbar, verbunden. Das Temperaturmessgerät wird über
@@ -286,55 +284,60 @@ Verrutschen gesichert, wie in \autoref{fig:lotzinn} sichtbar.
 
 \subsection{Kennlinien und Kenndaten von Solarzellen bei Bestrahlung}
 
-Um die Kennlinie der Solarzelle zu bestimmen wird diese, der jeweiligen Schaltung entsprechend, an einen 
-verstellbaren Widerstand geschlossen. Damit Messwerte generiert werden können, werden auch ein Amperemeter,
-sowie ein Voltmeter nach dem Schaltplan in \autoref{fig:schaltplan} in die Schaltung integriert. Bei den Messgeräten
-muss darauf geachtet werden, einen geeigneten Messbereich zu wählen.
+Um die Kennlinie der Solarzelle zu bestimmen wird diese, der jeweiligen
+Schaltung entsprechend, an einen verstellbaren Widerstand geschlossen. Damit
+Messwerte generiert werden können, werden auch ein Amperemeter, sowie ein
+Voltmeter nach dem Schaltplan in \autoref{fig:schaltplan} in die Schaltung
+integriert. Bei den Messgeräten muss darauf geachtet werden, einen geeigneten
+Messbereich zu wählen.
 
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width =0.5\textwidth]{./figures/schaltplan.PNG}
 	\end{center}
-	\caption[Schaltplan der Solarzelle]{Schaltplan der Solarzelle \cite{unterlagen_solarzelle}\\
-	A \dots Amperemeter\\
-	V \dots Voltmeter
+	\caption[Schaltplan der Solarzelle]{Schaltplan der Solarzelle
+		\cite{unterlagen_solarzelle} \\
+		A \dots Amperemeter          \\
+		V \dots Voltmeter
 	}\label{fig:schaltplan}
 \end{figure}
 
-Die folgenden Abbildungen zeigen die Serienschaltung, \autoref{fig:Serienschaltung}, sowie die Parallelschaltung, \autoref{fig:Parallelschaltung}.
-Um eine bessere Übersicht zu gewährleisten, wird bei den verwendeten Kabeln auf die Farbe geachtet.
-
+Die folgenden Abbildungen zeigen die Serienschaltung,
+\autoref{fig:Serienschaltung}, sowie die Parallelschaltung,
+\autoref{fig:Parallelschaltung}. Um eine bessere Übersicht zu gewährleisten,
+wird bei den verwendeten Kabeln auf die Farbe geachtet.
 
 \begin{figure}[H]
 	\centering
 	\captionbox[Serienschaltung der beiden Solarzellen]{Serienschaltung der beiden Solarzellen\\
-	1 \dots Solarzellenmodule\\
-	2 \dots Lampe\\
-	3 \dots regelbarer Widerstand\\
-	4 \dots Voltmeter\\
-	5 \dots Amperemeter\\
-	6 \dots entsprechende Verkabelung für Serienschaltung
+		1 \dots Solarzellenmodule\\
+		2 \dots Lampe\\
+		3 \dots regelbarer Widerstand\\
+		4 \dots Voltmeter\\
+		5 \dots Amperemeter\\
+		6 \dots entsprechende Verkabelung für Serienschaltung
 		\label{fig:Serienschaltung}}{
-		\includegraphics[width=.45\textwidth]{./figures/serienschaltung.jpg}
-	}
-	\hfill
-	\captionbox[Parallelschaltung der beiden Solarzellen]{Parallelschaltung der beiden Solarzellen \\
-	1 \dots Solarzellenmodule\\
-	2 \dots Lampe\\
-	3 \dots regelbarer Widerstand\\
-	4 \dots Voltmeter\\
-	5 \dots Amperemeter\\
-	6 \dots entsprechende Verkabelung für Parallelschaltung
-		 \label{fig:Parallelschaltung}}{
+		\includegraphics[width=.45\textwidth]{./figures/serienschaltung.jpg} } \hfill
+	\captionbox[Parallelschaltung der beiden Solarzellen]{Parallelschaltung der
+		beiden Solarzellen \\
+		1 \dots Solarzellenmodule\\
+		2 \dots Lampe\\
+		3 \dots regelbarer Widerstand\\
+		4 \dots Voltmeter\\
+		5 \dots Amperemeter\\
+		6 \dots entsprechende Verkabelung für Parallelschaltung
+		\label{fig:Parallelschaltung}}{
 		\includegraphics[width=0.45\textwidth]{./figures/parallelschaltung.jpg} }
 \end{figure}
 
 \subsubsection{Serienschaltung der beiden Solarzellen, wobei eine Solarzelle partiell abgeschattet wird}
 
-Um die partielle Abschattung einer Solarzelle zu simulieren, wird ein Stück Papier über einen Teil der ersten Solarzelle
-gelegt. Um sicherzustellen, dass das Papier sich nicht von der Solarzelle löst, wird dieses mit Klebeband gegen verrutschen
-gesichert. Dabei wird darauf geachtet, dass das Klebeband nur am Plastikrahmen festgeklebt wird, damit keine Kleberückstände
-auf der Solarzelle zurückbleiben. Die Abdunkelung ist in \autoref{fig:abgedeckt} sichtbar.
+Um die partielle Abschattung einer Solarzelle zu simulieren, wird ein Stück
+Papier über einen Teil der ersten Solarzelle gelegt. Um sicherzustellen, dass
+das Papier sich nicht von der Solarzelle löst, wird dieses mit Klebeband gegen
+verrutschen gesichert. Dabei wird darauf geachtet, dass das Klebeband nur am
+Plastikrahmen festgeklebt wird, damit keine Kleberückstände auf der Solarzelle
+zurückbleiben. Die Abdunkelung ist in \autoref{fig:abgedeckt} sichtbar.
 
 \begin{figure}[H]
 	\begin{center}
@@ -346,21 +349,26 @@ auf der Solarzelle zurückbleiben. Die Abdunkelung ist in \autoref{fig:abgedeckt
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
-Um den Diodenparameter, sowie den Wirkungsgrad der Solarzelle zu bestimmen, wird diese auf den entsprechenden
-Kupferbock zur Kühlung gelegt. Der Sensor wird neben die Solarzelle positioniert und mit einem Block unterlegt, 
-damit sich der Sensor auf der gleichen Höhe, wie die Solarzelle befindet.
+Um den Diodenparameter, sowie den Wirkungsgrad der Solarzelle zu bestimmen,
+wird diese auf den entsprechenden Kupferbock zur Kühlung gelegt. Der Sensor
+wird neben die Solarzelle positioniert und mit einem Block unterlegt, damit
+sich der Sensor auf der gleichen Höhe, wie die Solarzelle befindet.
 
-Um die Diodenkennlinie aufzuzeichnen wird das Keithley 2450 also Sourcemeter verwendet. Dieses wird über eine USB
-Schnittstelle mit dem Rechner verbunden. Um den Fehler bei der Spannungsmessung möglichst gering zu halten, wird 
-die Solarzelle mit 4 Kabeln mit dem Sourcemeter verbunden, wobei 2 der Sense-Leitung entsprechen.
+Um die Diodenkennlinie aufzuzeichnen wird das Keithley 2450 also Sourcemeter
+verwendet. Dieses wird über eine USB Schnittstelle mit dem Rechner verbunden.
+Um den Fehler bei der Spannungsmessung möglichst gering zu halten, wird die
+Solarzelle mit 4 Kabeln mit dem Sourcemeter verbunden, wobei 2 der
+Sense-Leitung entsprechen.
 
-Weil der Sonnensimulator leider kaputt war wurden als Lichtquelle eine höhenverstellbare Halogenlampe, sowie eine 
-LED Beleuchtung verwendet. Bei der Position der Lampe muss darauf geachtet werden, dass der Abstand zwischen der Lampe 
-und der Solarzelle oder dem Sensor konstant gehalten werden soll. Auch wird sichergestellt, dass die Lichtquelle
-immer ober dem Objekt zentriert wird. Um Störlicht von der Umgebung zu vermeiden, wird der Versuch bei ausgeschalteter 
-Raumbeleuchtung und geschlossenen Türen durchgeführt, um sicherzustellen, dass nur das gewünschte Licht von der, zu
-untersuchenden Lichtquelle auf den Sensor oder die Solarzelle trifft.
-
+Weil der Sonnensimulator leider kaputt war wurden als Lichtquelle eine
+höhenverstellbare Halogenlampe, sowie eine LED Beleuchtung verwendet. Bei der
+Position der Lampe muss darauf geachtet werden, dass der Abstand zwischen der
+Lampe und der Solarzelle oder dem Sensor konstant gehalten werden soll. Auch
+wird sichergestellt, dass die Lichtquelle immer ober dem Objekt zentriert wird.
+Um Störlicht von der Umgebung zu vermeiden, wird der Versuch bei
+ausgeschalteter Raumbeleuchtung und geschlossenen Türen durchgeführt, um
+sicherzustellen, dass nur das gewünschte Licht von der, zu untersuchenden
+Lichtquelle auf den Sensor oder die Solarzelle trifft.
 
 \section{Geräteliste}\label{sec:geraeteliste}
 
@@ -419,11 +427,10 @@ werden. Das entsprechende Interface ist in \autoref{fig:interface} sichtbar.
 \end{figure}
 
 Nun wird er Kompressor an den Strom angeschlossen und gleichzeitig die
-Aufzeichnung der Daten über den entsprechenden Knopf gestartet. 
+Aufzeichnung der Daten über den entsprechenden Knopf gestartet.
 %todo leistung kompressor
-Zusätzlich zur
-Temperaturmessung werden ca. im 2 Minuten- Takt die Drücke von den
-entsprechenden Barometern abgelesen, was in folgender \autoref{tab:drucke}
+Zusätzlich zur Temperaturmessung werden ca. im 2 Minuten- Takt die Drücke von
+den entsprechenden Barometern abgelesen, was in folgender \autoref{tab:drucke}
 sichtbar ist. Um sicherzustellen, dass die Drücke die richtige Zeit zugeordnet
 bekommen, werden Fotos von den Barometern gemacht und mithilfe der erfassten
 Metadaten des Smartphones die genaue Zeit notiert.
@@ -432,47 +439,56 @@ Metadaten des Smartphones die genaue Zeit notiert.
 \subsection{Kennlinien und Kenndaten von Solarzellen bei Bestrahlung}
 
 %todo max stimmt der abstand?
-Nachdem die Solarzelle und die Lampe, wie bereits in \autoref{sec:versuchsanordnung} sichtbar, aufgestellt sind,
-wird zunächst der Abstand zwischen diesen bestimmt. Dieser beträgt \SI{28.0(5)}{\cm}. Die Unsicherheit ist so groß
-gewählt, weil sich vor der Lampe eine gekrümmte Glasplatte befindet, die die genaue Distanzmessung nicht erleichtert.
-Zusätzlich sei angemerkt, dass die genaue Distanz zwischen jener Glasplatte und der eigentlichen Glühbirne der Lampe 
-nicht bekannt ist. Weiters fällt auf, dass die Solarzellen nicht genau Parallel zu der Lampe angeordnet sind. Für diese
-Verdrehung wird ein Winkel von \SI{5.0(1.0)}{\degree} gemessen. Auf diese Verdrehung wird später in der
-\autoref{sec:diskussion} noch genauer eingegangen.
+Nachdem die Solarzelle und die Lampe, wie bereits in
+\autoref{sec:versuchsanordnung} sichtbar, aufgestellt sind, wird zunächst der
+Abstand zwischen diesen bestimmt. Dieser beträgt \SI{28.0(5)}{\cm}. Die
+Unsicherheit ist so groß gewählt, weil sich vor der Lampe eine gekrümmte
+Glasplatte befindet, die die genaue Distanzmessung nicht erleichtert.
+Zusätzlich sei angemerkt, dass die genaue Distanz zwischen jener Glasplatte und
+der eigentlichen Glühbirne der Lampe nicht bekannt ist. Weiters fällt auf, dass
+die Solarzellen nicht genau Parallel zu der Lampe angeordnet sind. Für diese
+Verdrehung wird ein Winkel von \SI{5.0(1.0)}{\degree} gemessen. Auf diese
+Verdrehung wird später in der \autoref{sec:diskussion} noch genauer
+eingegangen.
 
-Zusätzlich wird auch die Größe eines Solarzellenmoduls gemessen um die Fläche bestimmen zu können. Der besseren Übersicht halber,
-werden diese Daten der \autoref{tab:grose_solarzelle} beigefügt.
+Zusätzlich wird auch die Größe eines Solarzellenmoduls gemessen um die Fläche
+bestimmen zu können. Der besseren Übersicht halber, werden diese Daten der
+\autoref{tab:grose_solarzelle} beigefügt.
 
 \subsubsection{Serienschaltung der beiden Solarzellen}
 
-Zunächst werden die Solarzellenmodule, wie in \autoref{fig:Serienschaltung} sichtbar, in den Schaltplan integriert.
+Zunächst werden die Solarzellenmodule, wie in \autoref{fig:Serienschaltung}
+sichtbar, in den Schaltplan integriert.
 
-Nun wird der Widerstand mithilfe des, dafür vorgesehenen Reglers, variiert und die
- abgelesenen Werte der Messgeräte in folgender \autoref{tab:werte_serienschaltung} aufgelistet.
+Nun wird der Widerstand mithilfe des, dafür vorgesehenen Reglers, variiert und
+die abgelesenen Werte der Messgeräte in folgender
+\autoref{tab:werte_serienschaltung} aufgelistet.
 
 %todo tab:werte_serienschaltung
 
-Zusätzlich werden noch die Werte bei Leerlauf und einem simulierten Kurzschluss gemessen. Dies geschieht, indem 
-der Stromkreis zunächst geöffnet und dann ohne Widerstand geschlossen wird. Der besseren Übersicht halber, sind 
-diese Werte auch in \autoref{tab:werte_serienschaltung} beigefügt.
+Zusätzlich werden noch die Werte bei Leerlauf und einem simulierten Kurzschluss
+gemessen. Dies geschieht, indem der Stromkreis zunächst geöffnet und dann ohne
+Widerstand geschlossen wird. Der besseren Übersicht halber, sind diese Werte
+auch in \autoref{tab:werte_serienschaltung} beigefügt.
 
 \subsubsection{Parallelschaltung der beiden Solarzellen}
-Auch bei der Parallelschaltung der beiden Solarzellen werden die Messwerte für den variierenden Widerstand
-und für den Leerlauf, sowie den Kurzschluss, von den Geräten abgelesen und in \autoref{tab:werte_parallelschaltung}
-aufgelistet.
+Auch bei der Parallelschaltung der beiden Solarzellen werden die Messwerte für
+den variierenden Widerstand und für den Leerlauf, sowie den Kurzschluss, von
+den Geräten abgelesen und in \autoref{tab:werte_parallelschaltung} aufgelistet.
 
 %todo tab:werte_parallelschaltung
 
-
 \subsubsection{Serienschaltung der beiden Solarzellen, wobei eine Solarzelle partiell abgeschattet wird}
-Zunächst wird die Größe vermessen, die durch das Blatt Papier verdeckt ist, wie in \autoref{fig:abgedeckt} sichtbar.
-Die entsprechenden Maße sind gemeinsam, mit den anfangs gemessenen Werten der Solarzelle in folgender 
+Zunächst wird die Größe vermessen, die durch das Blatt Papier verdeckt ist, wie
+in \autoref{fig:abgedeckt} sichtbar. Die entsprechenden Maße sind gemeinsam,
+mit den anfangs gemessenen Werten der Solarzelle in folgender
 \autoref{tab:grose_solarzelle} angeführt.
 
 %todo tab:grose_solarzelle
 
-Nun wird die gesamte Messung, wie bereits erklärt, für die verschiedenen Widerstände, den Leerlauf und den Kurzschluss
-durchgeführt und die Messwerte in \autoref{tab:werte_abgedeckt} aufgelistet.
+Nun wird die gesamte Messung, wie bereits erklärt, für die verschiedenen
+Widerstände, den Leerlauf und den Kurzschluss durchgeführt und die Messwerte in
+\autoref{tab:werte_abgedeckt} aufgelistet.
 
 %todo tab:werte_abgedeckt
 
@@ -480,24 +496,28 @@ durchgeführt und die Messwerte in \autoref{tab:werte_abgedeckt} aufgelistet.
 
 \subsubsection{Messung der Dunkelkennlinie}
 
-Zunächst wird die Solarzelle komplett abgedunkelt. Dazu wird diese vollflächig mit einem Stück Papier 
-abgedeckt. Zusätzlich wird dieses Papier mit einem schwereren Gegenstand beschwert, um dafür zu sorgen, dass
-die Solarzelle wirklich vollflächig abgedeckt ist. 
+Zunächst wird die Solarzelle komplett abgedunkelt. Dazu wird diese vollflächig
+mit einem Stück Papier abgedeckt. Zusätzlich wird dieses Papier mit einem
+schwereren Gegenstand beschwert, um dafür zu sorgen, dass die Solarzelle
+wirklich vollflächig abgedeckt ist.
 
-Um die Diodenkennlinie aufzuzeichnen, wird das Sourcemeter mit dem Rechner verbunden und das Programm, Kickstart
-geöffnet. Nun wird in der entsprechenden Software unter dem Menüpunkt "new" eine neue Messung gestartet.
-Nach erfolgreicher Verbindung mit dem Sourcemeter 2450 und der eingabe aller Parameter, wie zb den Maximalen Strom, 
-wie in den Unterlagen aus \cite{unterlagen_solarzelle} beschrieben, kann die Messung gestartet werden.
+Um die Diodenkennlinie aufzuzeichnen, wird das Sourcemeter mit dem Rechner
+verbunden und das Programm, Kickstart geöffnet. Nun wird in der entsprechenden
+Software unter dem Menüpunkt "new" eine neue Messung gestartet. Nach
+erfolgreicher Verbindung mit dem Sourcemeter 2450 und der eingabe aller
+Parameter, wie zb den Maximalen Strom, wie in den Unterlagen aus
+\cite{unterlagen_solarzelle} beschrieben, kann die Messung gestartet werden.
 Die so erzeugte Diodenkennlinie ist in \autoref{fig:dunkelkennlinie} sichtbar.
 
 %todo fig:dunkelkennlinie
 
-
 \subsubsection{Messung der Hellkennlinie und Bestimmung des Wirkungsgrades}
 
-Nun werden die Lampen, wie bereits in \autoref{sec:versuchsanordnung} beschrieben, positioniert und ebenfalls die Kennlinien
-aufgenommen. Die entsprechende Leistung der Lichtquelle wird anhand des Sensors bestimmt und vom analogen Messgerät abgelesen,
-was in folgender \autoref{tab:werte_solarzelle2} ersichtlich ist.
+Nun werden die Lampen, wie bereits in \autoref{sec:versuchsanordnung}
+beschrieben, positioniert und ebenfalls die Kennlinien aufgenommen. Die
+entsprechende Leistung der Lichtquelle wird anhand des Sensors bestimmt und vom
+analogen Messgerät abgelesen, was in folgender \autoref{tab:werte_solarzelle2}
+ersichtlich ist.
 
 %todo tab:werte_solarzelle2
 
@@ -524,7 +544,6 @@ Wert in Tabellen gerundet.
 
 % todo verdrehung (cos)
 
-
 \subsubsection{Serienschaltung der beiden Solarzellen}
 
 \subsubsection{Parallelschaltung der beiden Solarzellen}
@@ -535,10 +554,7 @@ Wert in Tabellen gerundet.
 
 \subsubsection{Messung der Dunkelkennlinie}
 
-
-
 \subsubsection{Messung der Hellkennlinie und Bestimmung des Wirkungsgrades}
-
 
 \section{Diskussion}\label{sec:diskussion}
 
